# advocate-data-analyser

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
scripts/: analyse_raw_schema.py  api.postman_collection.json  field_examples.json  schema_summary.json
src/datastore/: datastore.py  datastore_manager.py  mongo.py
src/models/: advocacy_program.py  advocacy_task.py  advocate.py
src/pipeline/: advocate_ingester.py  advocate_pipeline.py  ingest_stats.py
src/server/: api.py  start.py
src/utilities/: cleaning_utils.py
tests/datastore/: test_mongo.py
tests/models/: test_pydantic_models.py
tests/server/: test_api.py
tests/utilities/: test_cleaning_utilis.py
